<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".Quiz">


    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/progress_1_10"
        android:textColor="@color/darker_purple"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionField"
        android:layout_width="384dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner_radius"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:text="@string/question"
        android:textColor="@color/darkest_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="383dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_radius"
        android:minHeight="48dp"
        android:popupBackground="@color/brighter_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectOption"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_marginTop="316dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/finishQuiz"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/exit_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextQuestion" />

    <TextView
        android:id="@+id/selectOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_option"
        android:textColor="@color/darker_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionField" />
</androidx.constraintlayout.widget.ConstraintLayout>