<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecifyRightAnswer">


    <Spinner
        android:id="@+id/optionsSpinner"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner_radius"
        android:popupBackground="@color/brighter_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/questionConfirmation"
        android:layout_width="383dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_radius"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:text="@string/question"
        android:textColor="@color/darkest_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/provide_right_answer_for_the_question_above"
        android:textColor="@color/darkest_purple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionConfirmation" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="377dp"
        android:layout_height="67dp"
        android:layout_marginTop="320dp"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsSpinner" />

    <Button
        android:id="@+id/cancelOperationButton"
        android:layout_width="377dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:text="@string/cancel_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_option"
        android:textColor="@color/darker_purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>